# trading-1-1

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_console.txt  CMakeLists_qt6.txt  IMPLEMENTATION_PLAN.md  README.md  build.sh  build_windows.bat  demo_simulation.cpp  mastermind_dashboard.html
config/: mastermind_config.json
include/: Logger.h  RenkoChartWidget.h
include/api/: BinanceAPI.h  ExchangeAPI.h
include/core/: ConfigManager.h  DatabaseManager.h  OrderManager.h  PatternDetector.h  RenkoChart.h  RiskManager.h  TradingEngine.h  Types.h
include/ui/: ConfigurationWidget.h  ExchangeStatusWidget.h  LogWidget.h  MainWindow.h  MarketDataWidget.h  OrderManagementWidget.h  PatternDetectionWidget.h  PerformanceWidget.h  PositionWidget.h  RenkoChartWidget.h  RiskManagementWidget.h  TradingDashboard.h
info/: task.txt
src/: main.cpp  main_gui.cpp
src/api/: BinanceAPI.cpp  ExchangeAPI.cpp  ExchangeAPIFactory.cpp
src/core/: ConfigManager.cpp  DatabaseManager.cpp  Logger.cpp  OrderManager.cpp  PatternDetector.cpp  RenkoChart.cpp  RiskManager.cpp  TradingEngine.cpp
src/ui/: MainWindow.cpp  MarketDataWidget.cpp  OrderManagementWidget.cpp  PositionWidget.cpp  RenkoChartWidget.cpp  RiskManagementWidget.cpp
tests/: test_renko.cpp  test_system.cpp
